tests/baselines/reference/arbitraryModuleNamespaceIdentifiers_commonjs.errors.txt
arbitraryModuleNamespaceIdentifiers_commonjs.ts(20,7): error TS2322: Type '"expect error about someType"' is not assignable to type '"someType"'.
arbitraryModuleNamespaceIdentifiers_commonjs.ts(24,7): error TS2322: Type '"expect error about someType"' is not assignable to type '"someType"'.
arbitraryModuleNamespaceIdentifiers_commonjs.ts(29,7): error TS2322: Type '"expect error about otherType"' is not assignable to type '"otherType"'.


==== arbitraryModuleNamespaceIdentifiers_commonjs.ts (3 errors) ====
    const someValue = "someValue";
    type someType = "someType";
    
    export { someValue as "<X>" };
    import { "<X>" as valueX } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    if (valueX !== "someValue") throw "should be someValue";
    
    export { "<X>" as "<Y>" } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    import { "<Y>" as valueY } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    if (valueY !== "someValue") throw "should be someValue";
    
    export * as "<Z>" from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    import { "<Z>" as valueZ } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    if (valueZ["<X>"] !== "someValue") throw "should be someValue";
    if (valueZ["<Y>"] !== "someValue") throw "should be someValue";
    if (valueZ["<Z>"] !== valueZ) throw "should be export namespace";
    
    export { type someType as "<A>" };
    import { type "<A>" as typeA } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    const importTest: typeA = "expect error about someType";
          ~~~~~~~~~~
!!! error TS2322: Type '"expect error about someType"' is not assignable to type '"someType"'.
    
    export { type "<A>" as "<B>" } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    import { type "<B>" as typeB } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    const reimportTest: typeB = "expect error about someType";
          ~~~~~~~~~~~~
!!! error TS2322: Type '"expect error about someType"' is not assignable to type '"someType"'.
    
    export type * as "<C>" from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    import { type "<C>" as typeC } from "./arbitraryModuleNamespaceIdentifiers_commonjs";
    export type otherType = "otherType";
    const importStarTestA: typeC.otherType = "expect error about otherType";
          ~~~~~~~~~~~~~~~
!!! error TS2322: Type '"expect error about otherType"' is not assignable to type '"otherType"'.
    